[docs] add crud docs
